# srukf

./: .gitignore  .sonarcloud.properties  CMakeLists.txt  LICENSE  README.md  conanfile.py  gcovr.cfg  main.cpp
.github/workflows/: ci.yaml
include/: EigenInc.h  noise.hpp  operations.h  parameters.hpp  sensor_data.hpp  square_root_covariance.hpp  state.hpp  transitions.hpp  ukf.hpp
include/base/: sensor.hpp  sensor_data.h
include/core/: sensor.hpp
include/core/util/: functor.hpp  fwd_declarations.h  lookups.h  macros.hpp
include/slam/: sensor.hpp  sensor_data.h
lib/: CMakeLists.txt
lib/include/: noise.hpp  parameters.hpp  sensor_data.hpp  ukf.hpp
lib/include/base/: base_sensor.hpp  sensor_data.h
lib/include/core/: covariance.hpp  field.hpp  field_base.h  helper.hpp  parameters.hpp  sensor.hpp  sensor_data.h  state.hpp  transition.hpp  typedefs.h  ukf.hpp
lib/include/core/detail/: functor.hpp  traits.hpp  transform.hpp  ukf_impl.hpp
lib/include/core/math/: transformations.hpp
lib/include/core/util/: functor.hpp  fwd_declarations.h  lookups.h  statics.h  traits.hpp
lib/include/slam/: covariance.h  field.h  sensor.hpp  sensor_data.h  state.h  ukf.hpp
lib/src/: operations.cpp  parameters.cpp  transitions.cpp  ukf.cpp
runner/: CMakeLists.txt  implementations.h  main.cpp
src/: noise.cpp  transitions.cpp
tests/: CMakeLists.txt  noiseTest.cpp  parametersTest.cpp  sensorDataTest.cpp  testUtilities.hpp  test_parameters.cpp  transitionsTest.cpp
tests/base/: sensor_data_test.cpp  sensor_test.cpp
tests/core/: covariance_test.cpp  field_test.cpp  parameters_test.cpp  sensor.test.cpp  sensor_data_test.cpp  state_test.cpp  ukf_test.cpp
tests/core/detail/: functor_test.cpp  transform_test.cpp  ukf_impl_test.cpp
tests/core/math/: transformation_test.cpp
tests/mock/: sensor.cpp  sensor.h
tests/slam/: sensor_data_test.cpp  sensor_test.cpp
